# ChangeLog for dev-libs/hidapi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/hidapi/ChangeLog,v 1.10 2014/11/30 09:30:55 mgorny Exp $

  30 Nov 2014; Michał Górny <mgorny@gentoo.org>
  hidapi-0.8.0_rc1_p20140201.ebuild:
  Build GUI only for native ABI, fixes bug #494090 / FL-1831.

*hidapi-0.8.0_rc1_p20140201 (12 Nov 2014)

  12 Nov 2014; Diego E. Pettenò <flameeyes@gentoo.org>
  +hidapi-0.8.0_rc1_p20140201.ebuild:
  Bump using the Debian snapshot/packaging, and add support for multilib.
  Migrated to use virtual/libudev which was the correct dependency.

  25 Oct 2014; Diego E. Pettenò <flameeyes@gentoo.org>
  hidapi-0.8.0_pre20130121-r1.ebuild:
  Fix bashisms in configure.ac file; add missing udev dependency; update libusb
  dependency as it requires libusb-1, not libusb-compat.

  27 May 2014; Anthony G. Basile <blueness@gentoo.org>
  hidapi-0.8.0_pre20130121-r1.ebuild:
  Keyword ~arm

*hidapi-0.8.0_pre20130121-r1 (26 Jan 2014)

  26 Jan 2014; Anthony G. Basile <blueness@gentoo.org>
  +hidapi-0.8.0_pre20130121-r1.ebuild, hidapi-0.8.0_pre20130121.ebuild:
  Build with fox:1.7, bug #494090

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org>
  hidapi-0.8.0_pre20130121.ebuild:
  Stable for x86, wrt bug #489300

  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> hidapi-0.8.0_pre20130121.ebuild:
  amd64 stable, bug 489300

  31 Oct 2013; Anthony G. Basile <blueness@gentoo.org> ChangeLog:
  Keyword ~ppc ~ppc64

  27 Oct 2013; Anthony G. Basile <blueness@gentoo.org> ChangeLog:
  Initial commit