@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/hidapi
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/hidapi/ChangeLog,v 1.10 2014/11/30 09:30:55 mgorny Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/hidapi/ChangeLog,v 1.11 2015/03/03 23:32:53 blueness Exp $
+
+*hidapi-0.8.0_rc1_p20140719 (03 Mar 2015)
+
+  03 Mar 2015; Anthony G. Basile <blueness@gentoo.org>
+  +hidapi-0.8.0_rc1_p20140719.ebuild:
+  Version bump
 
   30 Nov 2014; Michał Górny <mgorny@gentoo.org>
   hidapi-0.8.0_rc1_p20140201.ebuild:
